began to add functionality for portfolio generation

--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ article{
     backdrop-filter: blur(10px);
 }
 
+img{
+    width: 300px;
+    height: 300px;
+}
+
+p{
+    color: white;
+    text-align: center;
+}
