--- a/develop/style copy.css
+++ b/develop/style copy.css
@@ -16,3 +16,12 @@ p{
     color: white;
     text-align: center;
 }
+
+.card-columns {
+    @include media-breakpoint-only(lg) {
+      column-count: 4;
+    }
+    @include media-breakpoint-only(xl) {
+      column-count: 5;
+    }
+  }
